--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "hrcu-sql-client",
-  "version": "1.0.0",
-  "description": "SQL client for HRCU",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "test"
-  },
-  "author": "James Ahfat",
-  "license": "ISC",
-  "dependencies": {
-    "chokidar": "^3.5.1",
-    "dotenv": "^8.2.0",
-    "mssql": "^6.3.1"
-  }
+    "name": "hrcu-sql-client",
+    "version": "1.0.0",
+    "description": "SQL client for HRCU",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "test": "test",
+        "install": "node install.js"
+    },
+    "author": "James Ahfat",
+    "license": "ISC",
+    "dependencies": {
+        "chokidar": "^3.5.1",
+        "dotenv": "^8.2.0",
+        "mssql": "^6.3.1"
+    }
 }
